[gd_scene load_steps=4 format=3 uid="uid://6045ostqg8u"]

[ext_resource type="Script" path="res://Misc/InteractionArea.gd" id="1_ux5uk"]
[ext_resource type="Theme" uid="uid://jdeju61gg57g" path="res://theme.tres" id="2_pmp74"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ti665"]
bg_color = Color(0.976471, 0.976471, 0.976471, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="InteractionArea" type="Area3D"]
collision_layer = 0
monitorable = false
script = ExtResource("1_ux5uk")

[node name="InteractionControl" type="Panel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 109.0
offset_top = -20.0
offset_right = 149.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ti665")

[node name="Label" type="Label" parent="InteractionControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -13.0
offset_right = 20.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_pmp74")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 22
text = "E"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
